# gd_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: BatteryRegs.msg  BatteryRegsArray.msg  FullState.msg  FullStateSim.msg  FullStateVel.msg  FullStateVelT.msg  MotorSystemVariables.msg  RCArray.msg  RCValue.msg  State.msg
scripts/: launch_all.sh  launch_roscore.sh  launch_selfbalance.sh  startup_parameters.py
srv/: SetInput.srv  SetMode.srv
